environments/sudbox/aws_vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "${var.pj_name}-${var.env}"
  }
}
